# nfl-data-engineering

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  template.yaml
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: deploy-lambda.yml
config/: dev.env
docker/: Dockerfile
docs/: Games Archive.html
events/: sample.json
scripts/: backfill_team_rankings.py  batched_backfill.py  check_tuesday_data.py  monitor_backfill_progress.py  trigger_lambda.py
src/: .cache.sqlite  config.py  main.py  migrate_to_monthly_partitions.py  requirements.txt  set_timestamp.py
src/box_scores/: box_scores_eda.ipynb  game_collector.py
src/data_collectors/: data_collector.py  game_collector.py  odds_data_collector.py  raw_data_fetcher  team_rankings_data_collector.py
src/date_functions/: date_functions.py
src/feature_eng/: box_score_feature_adder.py  calc_differential.py  feature_engineering.ipynb  matchup_creator.py  team_data_aggregator.py  weather_adder.py
src/geo/: calc_distance.py  geocode.py  timezones.py
src/helpers/: get_team_id  get_team_id.py  odds_convert.py  set_timestamp.py
src/inference/: bet_recommender.py  inference.py  inference_notebook.ipynb  spread_model.py
src/models/: model_columns.pkl  model_pipeline_20240903_192443.pkl  model_pipeline_20240903_203851.pkl
src/preprocess/: preprocess_box_scores.py  preprocess_tr_stats.py
src/s3_io/: s3_client.py
src/training/: feature_engineering.ipynb  (+5 more)
test/: test_main.py  test_odds_collector.py  test_s3_data_type_handling.py
(+13 files in other folders)
